# LaunchWrapper

./: .gitignore  CMakeLists.txt  README.md  build_release.bat  gen_vs_projects.bat
src/: CMakeLists.txt  LaunchWrapper.cpp
utility/: CMakeLists.txt  LaunchWrapperSink.cpp
